temp/objects/Game_Stat__c.object
<CustomObject>
    <label>Game Stat</label>
    <nameField>
        <label>Game Stat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Game Stats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>At_Bats__c</fullName>
        <label>At Bats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batting_Average__c</fullName>
        <formula>( Runs__c / At_Bats__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batting Average</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Game__c</fullName>
        <label>Game</label>
        <referenceTo>Game__c</referenceTo>
        <relationshipLabel>Game Stats</relationshipLabel>
        <relationshipName>Game_Stats</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Player_Name__c</fullName>
        <label>Player Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Player__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Player</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Game Stats</relationshipLabel>
        <relationshipName>Game_Stats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Put_Outs__c</fullName>
        <label>Put Outs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Runs__c</fullName>
        <label>Runs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Strike_Outs__c</fullName>
        <label>Strike Outs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Game__c</columns>
        <columns>Number__c</columns>
        <columns>Player_Name__c</columns>
        <columns>At_Bats__c</columns>
        <columns>Runs__c</columns>
        <columns>Strike_Outs__c</columns>
        <columns>Put_Outs__c</columns>
        <columns>Batting_Average__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>